# CPPConf.CI

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.txt  travis.yml
.travis/: install.sh  run.sh  setup.sh
include/hello/: hello.h
src/: hello.cpp  main.cpp
test/: CMakeLists.txt  test_hello.cpp
test_package/: CMakeLists.txt
